--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Web-Based TPV Assistant</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
@@ -19,23 +21,51 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">File</a>
-                </li>
-
-                ` <li class="nav-item">
-                    <a class="nav-link" href="#">View</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="chat.html">Help</a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">File</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">View</a>
+                        <ul class="dropdown-menu">
+                            <li><label for="show-assistant"class="dropdown-item">Show TPV Assistant <input id="show-assistant" type="checkbox"></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Help</a>
+                        <ul class="dropdown-menu">
+                            <li><button class="btn" type="button" data-bs-toggle="offcanvas"
+                                    data-bs-target="#configure-api-key" onclick="updateAPIKey()">Configure API Key</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
+
+    <div class="offcanvas offcanvas-start" id="configure-api-key">
+        <div class="offcanvas-header">
+            <h1 class="offcanvas-title">Configure API Key</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+            <h5>Enter, update, or remove the API Key used for the TPV Assistant.</h5>
+            <label for="API_KEY_INPUT">API Key: </label>
+            <input id="API_KEY_INPUT" type="password">
+            <label for="show-api-input">Show API Key</label>
+            <input id="show-api-input" type="checkbox" onclick="showAPIKey()">
+            <p>You can get your own API Key by visiting the <a href="https://openai.com/blog/openai-api" target="_blank">OpenAI website</a>.</p>
+
+            <button class="btn btn-secondary" type="button" onclick="removeAPIKey()">Remove API Key</button>
+            <button class="btn btn-primary" type="button" class="btn-close" data-bs-dismiss="offcanvas" onclick="setAPIKey()">Save
+                Changes</button>
+        </div>
+    </div>
 
     <div class="container mt-5">
         <div class="row">
@@ -48,40 +78,41 @@
 
     <button class="open-button" onclick="openForm()">TPV Assistant</button>
 
-    <div class="chat-popup" id="myForm">
+    <div class="chat-popup" id="tpv-assistant">
         <form class="form-container" onsubmit="return false">
             <div class="tab">
                 <button class="tablinks" onclick="showTab(event, 'FAQ')" id="defaultOpen">FAQ</button>
                 <button class="tablinks" onclick="showTab(event, 'CHAT')">CHAT</button>
+                <button class="tablinks" onclick="clearText('FAQ-text')">Clear FAQ</button>
+                <button class="tablinks" onclick="clearText('CHAT-text')">Clear CHAT</button>
             </div>
 
             <!-- FAQ Tab -->
             <div id="FAQ" class="tabcontent">
                 <div id="FAQ-text" class="editable">
-                    
+
                 </div>
                 <div id="FAQ-buttons"></div>
                 <textarea id="FAQ-message" placeholder="Type message.." name="msg"></textarea>
 
-                <button type="submit" class="btn" onclick="submitFAQPrompt()">Send</button>
+                <button id="FAQ-btn" type="submit" class="btn" onclick="submitFAQPrompt()">Send</button>
                 <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
             </div>
 
             <!-- Chat Tab -->
             <div id="CHAT" class="tabcontent">
                 <div id="CHAT-text" class="editable">
-                    <p class="chat-message"><strong>TPV:</strong> Hello how can I help you?</p>
+                    <p class="chat-message"><strong>TPV Assistant:</strong> Hello! how can I help you?</p></br>
                 </div>
 
                 <textarea id="CHAT-message" placeholder="Type message.." name="msg"></textarea>
-                <button type="submit" class="btn" onclick="submitCHATPrompt()">Send</button>
+                <button id="CHAT-btn" type="submit" class="btn" onclick="submitCHATPrompt()">Send</button>
                 <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
             </div>
 
         </form>
     </div>
-
-    <script src="key.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
